<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:id="@+id/imageView"
        android:src="@drawable/backgraund" />

    <TextView
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:id="@+id/tv_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Budget"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_marginLeft="10dp"
        android:textSize="30dp"
        android:id="@+id/editText_budget"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/tv_budget"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <requestFocus />
    </EditText>
    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_soglia"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Soglia"
        android:layout_below="@+id/editText_budget"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_marginLeft="10dp"
        android:textSize="30dp"
        android:id="@+id/editText_soglia"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/tv_soglia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <requestFocus />
    </EditText>

    <TextView
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:id="@+id/tv_visualizzazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visualizzazione"
        android:layout_below="@+id/editText_soglia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shared_radiogroup"
        android:layout_below="@+id/tv_visualizzazione"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giornaliera"
            android:textSize="15dp"
            android:id="@+id/radioButton_gior" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settimanale"
            android:textSize="15dp"
            android:id="@+id/radioButton_sett" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textSize="15dp"
            android:text="@string/mensile"
            android:id="@+id/radioButton_mens" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/annuale"
            android:id="@+id/radioButton_annuale" />
    </RadioGroup>

    <Button
        android:id="@+id/annulla"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Annulla"
        android:onClick="annulla"
        android:layout_above="@+id/salva"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/salva"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Salva"
        android:onClick="salvaBudget"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
